--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
-  Hello World
+  <h1>Hello <span id="name">World</span> </h1>
+  <div class="input">
+    <input type="text" name="name" id="nameInput">
+  </div>
 </body>
 </html>
