--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -11,5 +11,6 @@
   <div class="input">
     <input type="text" name="name" id="nameInput">
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
