water reminder video 2

--- a/water-reminder/index.html
+++ b/water-reminder/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <input type="number" placeholder="interval in minutes" id="num">
-  <button>Remind me!!!</button>
+  <button id="add">Remind me!!!</button>
+
+  <script src="index.js"></script>
 </body>
 </html>
