add time and quote

--- a/momentum-clone/index.html
+++ b/momentum-clone/index.html
@@ -4,8 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div id="bg"></div>
+  <div class="container">
+    <div id="header"></div>
+    <div id="center">
+      <div id="time"></div>
+      <div id="quote"></div>
+    </div>
+    <div id="footer"></div>
+  </div>
+
+  <script src="jq.js"></script>
+  <script src="background-image.js"></script>
+  <script src="time.js"></script>
+  <script src="quote.js"></script>
 </body>
 </html>
