add location code

--- a/momentum-clone/index.html
+++ b/momentum-clone/index.html
@@ -21,5 +21,6 @@
   <script src="background-image.js"></script>
   <script src="time.js"></script>
   <script src="quote.js"></script>
+  <script src="weather.js"></script>
 </body>
 </html>
