add weather api

--- a/momentum-clone/index.html
+++ b/momentum-clone/index.html
@@ -9,7 +9,10 @@
 <body>
   <div id="bg"></div>
   <div class="container">
-    <div id="header"></div>
+    <div id="header">
+      <img src="" alt="" id="weather-icon">
+      <div id="weather"></div>
+    </div>
     <div id="center">
       <div id="time"></div>
       <div id="quote"></div>
