--- a/momentum-clone/index.html
+++ b/momentum-clone/index.html
@@ -25,6 +25,13 @@
         <div id="quote"></div>
       </div>
       <div id="footer"></div>
+
+      <div id="card">
+        <h2>Todos</h2>
+        <ul id="tasks">
+
+        </ul>
+      </div>
     </div>
 
     <script src="jq.js"></script>
@@ -32,5 +39,6 @@
     <script src="time.js"></script>
     <script src="quote.js"></script>
     <script src="weather.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
