finish momentum clone

--- a/momentum-clone/index.html
+++ b/momentum-clone/index.html
@@ -26,7 +26,7 @@
       </div>
       <div id="footer"></div>
 
-      <div id="card">
+      <div id="card" style="display: none;">
         <h2>Todos</h2>
         <ul id="tasks">
 
@@ -34,6 +34,7 @@
         <input type="text" id="newTask">
         <button id="addTask">Add Task</button>
       </div>
+      <div id="todo">Todo</div>
     </div>
 
     <script src="jq.js"></script>
